# freeopcua-test

./: CMakeLists.txt  Doxyfile  README.md  freeopcua-notes.txt  notes.txt  server.conf
include/: analogitem.h  basedatavariable.h  baseobject.h  basevariable.h  dataitem.h  folder.h  node.h  objecttype.h  property.h  reference.h  temperaturesensor.h  typenode.h  variable.h  variabletype.h
src/: analogitem.cpp  analogitem.h  basedatavariable.cpp  basedatavariable.h  baseobject.cpp  baseobject.h  basevariable.cpp  dataitem.cpp  dataitem.h  folder.cpp  main.cpp  nmtemperature.cpp  nmtemperature.h  node.cpp  node.h  nodemanager.cpp  nodemanager.h  object.cpp  object.h  objecttype.cpp  objecttype.h  opcserver.cpp  opcserver.h  property.cpp  property.h  reference.cpp  reference.h  temperaturesensor.cpp  temperaturesensor.h  temperaturesensorobject.cpp  temperaturesensorobject.h  typednode.cpp  typednode.h  typenode.cpp  typenode.h  variable.cpp  variable.h  variabletype.cpp  variabletype.h
