project(freeopcua-test)
cmake_minimum_required(VERSION 2.8)
aux_source_directory(src SRC_LIST)
set (EXE_NAME freeopcua-native-test-server)
add_executable(${EXE_NAME} ${SRC_LIST})
set(CMAKE_CXX_FLAGS " ${CMAKE_CXX_FLAGS} -std=c++11") 
find_library(LIBOPCUASERVER opcuaserver)
find_library(LIBOPCUACORE opcuacore)
find_library(LIBOPCUAPROTOCOL opcuaprotocol)
target_link_libraries(${EXE_NAME} ${LIBOPCUASERVER} ${LIBOPCUACORE} ${LIBOPCUAPROTOCOL})

